K8S-STACK/v2/drone-ci/drone-ci.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: drone-ci
  name: drone-ci
  namespace: default
spec:
  selector:
    matchLabels:
      k8s-app: drone-ci
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: drone-ci
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master1
      containers:
      - name: drone-ci
        image: drone/drone:1.7
        volumeMounts:
        - mountPath: /var/lib/drone/
          name: drone-ci-volume
        - mountPath: /var/run/docker.sock
          name: docker-sock
        ports:
        - containerPort: 80
      volumes:
      - name: drone-ci-volume
        hostPath:
          path: /var/lib/drone/data
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: drone-ci
  name: drone-ci
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: drone-ci
